--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "grunt-shell": "~0.6.4",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-bump": "0.0.13",
-    "grunt-contrib-jshint": "~0.8.0"
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-simple-mocha": "~0.4.0",
+    "grunt-mocha-test": "~0.9.3"
   }
 }
