--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha -R spec test/*.js"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
