--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "minimatch":"0.2.x"
   },
   "devDependencies": {
+    "fromjs":"2.1.x",
     "mocha": "1.17.x",
     "should": "3.1.x",
     "grunt": "~0.4.2",
