--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,11 @@ node_js:
   - "0.10"
   - "0.8"
   - "0.6"
+before_install:
+ - npm install -g grunt-cli
+install:
+ - npm install
+before_script:
+ - grunt
+script:
+ - grunt coveralls
