updated dependent packages to latest versions

--- a/package.json
+++ b/package.json
@@ -32,20 +32,20 @@
     "fromjs":"2.1.x",
     "mocha": "1.17.x",
     "should": "3.1.x",
-    "grunt": "~0.4.2",
-    "grunt-contrib-uglify": "~0.3.2",
-    "grunt-hashres": "~0.4.1",
-    "grunt-shell": "~0.6.4",
-    "grunt-contrib-clean": "~0.5.0",
+    "grunt": "0.4.x",
+    "grunt-contrib-uglify": "0.4.x",
+    "grunt-hashres": "0.4.x",
+    "grunt-shell": "0.7.x",
+    "grunt-contrib-clean": "0.5.x",
     "grunt-bump": "0.0.13",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-mocha-test": "~0.9.3",
-    "blanket": "~1.1.6",
+    "grunt-contrib-jshint": "0.10.x",
+    "grunt-mocha-test": "0.10.x",
+    "blanket": "1.1.x",
     "mocha-lcov-reporter": "0.0.1",
-    "grunt-coveralls": "~0.3.0",
-    "grunt-contrib-copy": "~0.5.0",
+    "grunt-coveralls": "0.3.x",
+    "grunt-contrib-copy": "0.5.x",
     "grunt-blanket": "0.0.8",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "0.4.x"
   },
   "engine":"node>=0.8.0"
 }
