--- a/package.json
+++ b/package.json
@@ -29,22 +29,22 @@
     "commander": "2.2.x",
     "bliss": "1.0.x",
     "JSONPath": "0.10.x",
-    "glob": "3.2.x",
+    "glob": "4.0.x",
     "minimatch": "0.3.x",
     "fromjs": "2.1.x"
   },
   "devDependencies": {
     "fromjs": "2.1.x",
-    "mocha": "1.18.x",
-    "should": "3.3.x",
+    "mocha": "1.20.x",
+    "should": "4.0.x",
     "grunt": "0.4.x",
     "grunt-contrib-uglify": "0.4.x",
     "grunt-hashres": "0.4.x",
     "grunt-shell": "0.7.x",
     "grunt-contrib-clean": "0.5.x",
-    "grunt-bump": "0.0.13",
+    "grunt-bump": "0.0.x",
     "grunt-contrib-jshint": "0.10.x",
-    "grunt-mocha-test": "0.10.x",
+    "grunt-mocha-test": "0.11.x",
     "blanket": "1.1.x",
     "mocha-lcov-reporter": "0.0.1",
     "grunt-coveralls": "0.3.x",
