--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
   "dependencies": {
     "JSONPath": "0.10.x",
     "bliss": "1.0.x",
-    "commander": "2.2.x",
+    "commander": "2.3.x",
     "fromjs": "2.1.x",
-    "fstream": "^1.0.2",
+    "fstream": "1.0.x",
     "glob": "4.0.x",
-    "minimatch": "0.3.x",
-    "request": "^2.45.0",
-    "unzip": "^0.1.11"
+    "minimatch": "1.0.x",
+    "request": "2.45.x",
+    "unzip": "0.1.x"
   },
   "devDependencies": {
     "fromjs": "2.1.x",
