--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "type": "git",
     "url": "https://github.com/rravuri/tidl.git"
   },
+  "publishConfig" : {
+    "registry":"http://nexus.dev.global.tesco.org/nexus/content/repositories/TescoJSSharedComponents/"
+  },
   "author": {
     "name": "Rakesh Ravuri",
     "email": "rravuri@gmail.com"
